package pt.isep.psoft.aisafe.domain;

public enum MaintenanceRecordStatus {
    SCHEDULED,
    IN_PROGRESS,
    COMPLETED
}